# demcmc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  test.py  tox.ini
.github/workflows/: test.yml
demcmc/: dem.py  emission.py  mcmc.py
demcmc/tests/: test_dem.py
doc/: Makefile  conf.py  index.rst  installing.rst
doc/api/: dem.rst  emission.rst  index.rst  mcmc.rst
doc/explanation/: dem_theory.md  existing_tools.md  index.rst  other_tools.md  workflow.dia  workflow.md
doc/tutorials/: plot_real.py  plot_synthetic.py
doc/tutorials/data/: sample_cont_func.nc  sample_intensity_values.nc
src/demcmc/: __init__.py  dem.py  emission.py  io.py  mcmc.py  sample_data.py  units.py
src/demcmc/tests/: test_dem.py  test_emission.py  test_mcmc.py
