[project]
name = "demcmc"
authors = [
  { name="David Stansby", email="d.stansby@ucl.ac.uk" },
]
description = "Differential Emission Measure calculations using Monte Carlo methods."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "astropy",
    "emcee",
    "matplotlib",
    "netCDF4",
    "numpy",
    "pooch",
    "xarray",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://demcmc.readthedocs.io"
"Bug Tracker" = "https://github.com/dstansby/demcmc/issues"
Documentation = "https://demcmc.readthedocs.io"
repository = "https://github.com/dstansby/demcmc"

[project.optional-dependencies]
docs = [
    "myst_parser",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx",
    "sphinx_gallery",
]
tests = [
    "pytest",
    "pytest-cov"
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.codespell]
skip = '.git'

[tool.isort]
profile = "black"
